# VAPRO

./: .gitignore  .gitmodules  CMakeLists.txt  SocketClient.cpp  SocketClient.h  build_microbenchmark.sh  clustering.cpp  clustering.h  example_mpi_program.cpp  microbenchmark_loop.cpp  papi_wrap.cpp  papi_wrap.h  papicnt.w  perf_assembly.cpp  perf_jevent.cpp  pmc_jevents.cpp  pmu.cpp  readme.md  test_no_reset.cpp  utility.cpp  wrapper.cpp
deprecated/: clustering.cpp  hexaddr_to_linenum.py  hook.cpp  online_analyse.cpp  online_analyse.h  papi_wrap.cpp  pmc.cpp  pmc_wrapper.h  pmu.h  utility.h
examples/: CMakeLists.txt  example_mpi_program.cpp  microbenchmark_pair_send.cpp
include/: collector.h  collector_papi.h  common.h  controller.h  data_store.h  dbg.h
myvapro/: pyvenv.cfg
src/: CollectorPapi.cc  collector.cc  collector_papi.cc  controller.cc  data_store.cc  mywrap.cc  mywrap.w  wrap.py
test/: 1.cpp  pyvenv.cfg  test_collector.cc  test_vapro
test/examples/: example_mpi_program  microbenchmark_loop  microbenchmark_pair_send
wrap/: wrap.py
